# excel-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  copilot_excel_run.sh  pyproject.toml  setup.py  sign_app.command
.github/workflows/: ci.yml  copilot-setup-steps.yml  publish.yml  release.yml
chrome-extension/: README.md  manifest.json
chrome-extension/background/: service-worker.js
chrome-extension/popup/: options.html  popup.css  popup.html  popup.js
copilot-studio-connector/: apiDefinition.swagger.json  apiProperties.json  script.csx
copilot-studio-connector/resources/: __init__.py  workbook_report.py
copilot-studio-connector/server/: app.py  mcp_handler.py
copilot-studio-connector/tools/: __init__.py  complete_assignment.py  execute_live.py  execute_openpyxl.py  get_engine_status.py  parse_instructions.py  verify_workbook.py
docs/: architecture.md  layers.md  troubleshooting.md
excel_engine/: __init__.py  cli.py  config.py  engine.py  interactive.py  recalc.py  recovery.py
excel_engine/layers/: __init__.py  applescript_layer.py  openpyxl_layer.py  pyautogui_layer.py  system_events.py  vba_layer.py  xlwings_layer.py
excel_engine/parsers/: __init__.py  instruction_parser.py  task_extractor.py
excel_engine/planner/: __init__.py  dependency_graph.py  task_planner.py
excel_engine/presets/: __init__.py  financial.py
excel_engine/utils/: __init__.py  excel_constants.py  mac_utils.py  path_handler.py
extensions/: README.md  excel-engine.py
go-mcp-server/: .gitignore  README.md  go.mod  main.go  main_test.go
go-mcp-server/tools/: bridge.go  (+3 more)
gui/: BUILD.md  README.md  app.py  build_app.py  entitlements.plist  launch.bat  launch.command  launch.sh  requirements.txt  run_app.py
ios-app/: README.md  project.yml
mcp-server/: README.md  __main__.py  config.json  pyproject.toml  server.py
plan/: feature-merge-and-optimize-1.md
plugin/: README.md  install.sh
tests/: conftest.py  test_cli_commands.py  test_cli_edge_cases.py  test_e2e_sam.py  test_engine.py  test_engine_dispatch.py  test_engine_fallback.py  test_execution_correctness.py  test_extraction_fixes.py  test_gui_smoke.py  test_integration.py  test_interactive.py  test_layers.py  test_new_patterns.py  test_openpyxl_layer_dispatch.py  test_parsers.py  test_performance_improvements.py  test_planner.py  test_recalc.py  test_supplemental.py  test_task_extractor_negative.py  test_verification_improvements.py  test_verifier_leniency.py  test_verifier_methods.py
(+20 files in other folders)
