[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "excel-engine"
version = "1.0.0"
description = "Autonomous Excel automation engine for macOS — 6-layer architecture"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Excel Engine Contributors"},
]
keywords = ["excel", "automation", "macos", "openpyxl", "xlwings", "applescript"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Spreadsheet",
]

dependencies = [
    "openpyxl>=3.1.0,<4.0.0",
]

[project.optional-dependencies]
live = [
    "xlwings>=0.30.0,<1.0.0",
]
ui = [
    "pyautogui>=0.9.54,<1.0.0",
]
parsers = [
    "python-docx>=0.8.11",
    "pdfplumber>=0.9.0",
]
all = [
    "xlwings>=0.30.0",
    "pyautogui>=0.9.54",
    "python-docx>=0.8.11",
    "pdfplumber>=0.9.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
excel-engine = "excel_engine.cli:main"

[project.urls]
Homepage = "https://github.com/mmanthe37/excel-engine"
Repository = "https://github.com/mmanthe37/excel-engine"
"Bug Tracker" = "https://github.com/mmanthe37/excel-engine/issues"

[tool.setuptools.packages.find]
include = ["excel_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
